# salvo_admin

./: .gitignore  cargo.toml
app/apis/: Cargo.toml
app/apis/src/: common.rs  lib.rs
app/apis/src/system/: mod.rs
app/apis/src/system/api/: mod.rs  sys_api_db.rs  sys_dept.rs  sys_dict_data.rs  sys_dict_type.rs  sys_job.rs  sys_job_log.rs  sys_login_log.rs  sys_menu.rs  sys_oper_log.rs  sys_post.rs  sys_role.rs  sys_update_log.rs  sys_user.rs  sys_user_online.rs
app/apis/src/system/api_fn/: sys_api_db.rs  sys_dept.rs  sys_dict_data.rs  sys_dict_type.rs  sys_job.rs  sys_job_log.rs  sys_login_log.rs  sys_menu.rs  sys_oper_log.rs  sys_post.rs  sys_role.rs  sys_update_log.rs  sys_user.rs  sys_user_online.rs
app/apis/src/utils/: mod.rs  res_util.rs
app/middleware-fn/: Cargo.toml
app/middleware-fn/src/: api_auth.rs  ctx.rs  error_catcher.rs  jwt_auth.rs  lib.rs  operation_log.rs  user_utils.rs
app/service/: Cargo.toml
app/service/src/: common.rs  lib.rs
app/service/src/service_utils/: api_utils.rs  data_scope.rs  jwt.rs  mod.rs  web_utils.rs
app/service/src/system/: mod.rs  server_info.rs  sys_api_db.rs  sys_dept.rs  sys_dict_data.rs  sys_dict_type.rs  sys_job.rs  sys_job_log.rs  sys_login_log.rs  sys_menu.rs  sys_oper_log.rs  sys_post.rs  sys_role.rs  sys_role_api.rs  sys_update_log.rs  sys_user.rs  sys_user_dept.rs  sys_user_online.rs  sys_user_role.rs
app/service/src/tasks/: task_builder.rs  task_runner.rs
app/service/src/tasks/task/: system.rs
configs/: Cargo.toml
configs/src/: cfgs.rs  get_config.rs
db/: Cargo.toml
db/src/common/: const_data.rs  ctx.rs  jwt.rs  mod.rs  res.rs  sse_msg.rs
db/src/system/: prelude.rs
db/src/system/entities/: prelude.rs
db/src/system/models/: sys_oper_log.rs
migration/data/m20220101_000001_create_table/: obj_sys_dept.sql  obj_sys_dict_data.sql  obj_sys_dict_type.sql  obj_sys_menu.sql  obj_sys_post.sql  obj_sys_role.sql  obj_sys_role_api.sql  obj_sys_role_dept.sql  obj_sys_user.sql  obj_sys_user_post.sql  obj_sys_user_role.sql
migration/src/: db_utils.rs
migration/src/migrations/: m20220101_000001_create_table.rs
utils/: Cargo.toml
utils/src/: lib.rs  log_setting.rs  my_env.rs  rand_utils.rs
